// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iconContainer HOC should have the right class names when a custom className is passed 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon slds-icon-text-default custom-classname"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when a custom container class name is passed 1`] = `
<span
  className="slds-icon_container custom-container-classname"
>
  <svg
    className="slds-icon slds-icon-text-default"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when ehiter the variant and size are not passed 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon slds-icon-text-default"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when size is large 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon_large slds-icon-text-default"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when size is medium 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon slds-icon-text-default"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when size is small 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon_small slds-icon-text-default"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when size is x-small 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon_x-small slds-icon-text-default"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when size is xx-small 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon_xx-small slds-icon-text-default"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when variant is default 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon slds-icon-text-default"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when variant is error 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon slds-icon-text-error"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when variant is light 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon slds-icon-text-light"
  />
</span>
`;

exports[`iconContainer HOC should have the right class names when variant is warning 1`] = `
<span
  className="slds-icon_container"
>
  <svg
    className="slds-icon slds-icon-text-warning"
  />
</span>
`;
